--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "tena-cierge-web",
   "private": true,
   "scripts": {
-    "dev": "bunx next dev --port 3200",
-    "build": "bunx next build",
-    "start": "bunx next start -p 3200",
-    "lint": "bunx next lint"
+    "dev": "bun x next dev --port 3200",
+    "build": "bun x next build",
+    "start": "bun x next start -p 3200",
+    "lint": "bun x next lint"
   },
   "dependencies": {
     "drizzle-orm": "^0.30.10",
+    "sharp": "^0.33.4",
     "luxon": "^3.4.4",
     "mysql2": "^3.9.7",
     "next": "^14.2.5",
