--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "luxon": "^3.4.4",
     "mysql2": "^3.9.7",
     "next": "^14.2.5",
+    "recharts": "^2.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "web-push": "^3.6.7",
