--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "file:vendor/clsx",
     "drizzle-orm": "^0.30.10",
+    "lodash": "file:vendor/lodash",
     "recharts": "^2.12.7",
     "sharp": "^0.33.4",
     "luxon": "^3.4.4",
     "mysql2": "^3.9.7",
     "next": "^14.2.5",
-    "recharts": "^2.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-smooth": "file:vendor/react-smooth",
     "web-push": "^3.6.7",
     "zod": "^3.23.8"
   },
