--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "react-smooth": "file:vendor/react-smooth",
     "tiny-invariant": "file:vendor/tiny-invariant",
     "victory-vendor": "file:vendor/victory-vendor",
-    "web-push": "^3.6.6",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "google-auth-library": "file:vendor/google-auth-library"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
